[package]
name = "EncDBEnclave"
version = "1.0.0"
authors = ["Baidu"]
edition = "2018"

[lib]
name = "encdb"
crate-type = ["staticlib"]

[features]
default = ["mesalock_sgx"]
mesalock_sgx = []

[dependencies]
rusty-leveldb = { path = "../../../" }
rand = { version = "0.7", git = "https://github.com/mesalock-linux/rand-sgx" }
protected_fs_rs = {git = "https://github.com/mesalock-linux/protected_fs_rs"}

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tcrypto = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tseal = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[profile.release]
lto = false
