[package]
name = "UnitTest"
version = "1.0.0"
authors = ["Baidu"]
edition = "2018"

[lib]
name = "unittest"
crate-type = ["staticlib"]

[features]
default = ["mesalock_sgx"]
mesalock_sgx = []

[dependencies]
rusty-leveldb = { path = "../../../" }
rand = { version = "0.7", git = "https://github.com/mesalock-linux/rand-sgx" }
integer-encoding = {version = "1.0", git = "https://github.com/mesalock-linux/integer-encoding-rs-sgx"}

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tunittest = {rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[profile.release]
lto = false
