[package]
name = "WordAnalyzeEnclave"
version = "1.0.0"
authors = ["sck"]
edition = "2018"

[lib]
name = "wordanalyze"
crate-type = ["staticlib"]

[features]
default = ["mesalock_sgx"]
mesalock_sgx = []

[dependencies]
rusty-leveldb = { path = "../../../" }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[profile.release]
lto = false
